<resources>
    <string name="app_name">Open Sudoku 2</string>
    <string name="edit_sudoku">Edit sudoku</string>
    <string name="puzzle_folders">Open Sudoku 2 puzzle folders</string>
    <string name="version">Version %s</string>
    <string name="homepage" translatable="false">https://github.com/buliasz/open-sudoku-2</string>
    <string name="send_me_bugs">
        Ideas, fixes etc. are welcome. If you run into a bug, don\'t hesitate to use the issue
        tracker on the project\'s homepage.
	</string>
    <string name="current_developers_label">Open Sudoku 2 Author</string>
    <string name="current_developers" translatable="false">Bart Uliasz</string>
    <string name="old_developers_label">Open Sudoku 1 Authors</string>
    <string name="old_developers" translatable="false">Óscar García Amor, Roman Mašek</string>
    <string name="localization_contributors_label">Localization Contributors</string>
    <string name="localization_contributors" translatable="false">
        Vit Hnilica\n
        Martin Sobola\n
        Martin Helff\n
        Diego Pierotto\n
        Gokay Can Kayki\n
        Paulo Schopf\n
        Joaquim Pedroto Costa\n
        @madcrow\n
        @Tubix\n
        @ceskyDJ\n
        @fabpolli
    </string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="get_more_puzzles_online">Get more puzzles online</string>
    <string name="name">Name:</string>
    <string name="note">Note:</string>
    <string name="select_number">Select number</string>
    <string name="edit_note">Edit note</string>
    <string name="add_folder">Add folder</string>
    <string name="import_file">Import</string>
    <string name="import_file_title">Import file %s</string>
    <string name="about">About</string>
    <string name="error">Error</string>
    <string name="rename_folder">Rename folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="rename_folder_title">Rename %s</string>
    <string name="delete_folder_title">Delete %s</string>
    <string name="delete_folder_confirm">Are you sure you want to delete this folder?</string>
    <string name="no_puzzles">No puzzles</string>
    <string name="one_puzzle">1 puzzle</string>
    <string name="n_puzzles">%d puzzles</string>
    <string name="all_solved">all solved</string>
    <string name="n_solved">%s solved</string>
    <string name="n_unsolved">%d unsolved</string>
    <string name="n_playing">%d playing</string>
    <string name="solved">Solved</string>
    <string name="playing">Playing</string>
    <string name="not_started">Not started</string>
    <string name="last_played_at">Last played %s</string>
    <string name="created_at">Created %s</string>
    <string name="at_time">at %s</string>
    <string name="yesterday_at_time">yesterday at %s</string>
    <string name="on_date">on %s</string>
    <string name="add_sudoku">Add sudoku</string>
    <string name="filter">Filter</string>
    <string name="filter_by_gamestate">Filter by game state</string>
    <string name="folders">Folders</string>
    <string name="delete_puzzle_confirm">Are you sure you want to delete selected puzzle?</string>
    <string name="reset_puzzle_confirm">Are you sure you want to reset selected puzzle?</string>
    <string name="play_puzzle">Play this puzzle</string>
    <string name="reset_puzzle">Reset puzzle</string>
    <string name="edit_puzzle">Edit puzzle</string>
    <string name="delete_puzzle">Delete puzzle</string>
    <string name="filter_active">Filtered: %s</string>
    <string name="undo">Undo</string>
    <string name="clear_all_notes">Clear all notes</string>
    <string name="fill_in_notes">Fill in notes</string>
    <string name="restart">Restart</string>
    <string name="congrats">Congratulations, you have solved the puzzle in %s!</string>
    <string name="restart_confirm">Are you sure you want to restart this game?</string>
    <string name="well_done">Well done!</string>
    <string name="clear_all_notes_confirm">Are you sure you want to clear all notes?</string>
    <string name="settings">Settings</string>
    <string name="game_settings">Game Settings</string>
    <string name="game_helpers">Game Helpers</string>
    <string name="highlight_wrong_values">Highlight wrong values</string>
    <string name="highlight_wrong_values_summary">Highlight values that break rules of sudoku.</string>
    <string name="input_methods">Input Modes</string>
    <string name="popup">Popup</string>
    <string name="popup_summary">Edit cell value and note in popup.</string>
    <string name="single_number">Single number</string>
    <string name="single_number_summary">Select number, then just tap on cell to set its value or note.</string>
    <string name="numpad">Numpad</string>
    <string name="numpad_summary">Show numpad (acts as standard numeric keyboard)</string>
    <string name="numpad_move_right">Move right on press</string>
    <string name="numpad_move_right_summary">Moves cell selection by one cell to the right when number button is pressed.
	</string>
    <string name="numpad_abbr">Number Pad</string>
    <string name="popup_abbr">Pop</string>
    <string name="single_number_abbr">Single Number</string>
    <string name="welcome">Welcome</string>
    <string name="hint">Hint</string>
    <string name="help">Help</string>
    <string name="that_is_all">That\'s all</string>
    <string name="first_run_hint">
        There are several input modes which you can use to fill in the puzzle.
        In order to help you get familiar with these modes, there will be several hints displayed as you go through them.
        \n\nYou can disable these hints in game settings.\n
	</string>
    <string name="im_popup_hint">
        You\'re now in the <i>Popup</i> input mode.
        Tap any cell with finger to edit its content.
        \n\nNotice the button in the lower right corner.
        You can use this button to switch to another input mode.\n
	</string>
    <string name="im_single_number_hint">
        You\'re now in the <i>Single number</i> input mode.
        First select any number button by pressing it.
        Then just tap on cells in which you want to have the selected number filled.
        \n\nPress <i>Pencil</i> button to toggle the cell\'s note editing.\n
	</string>
    <string name="im_numpad_hint">
        You\'re now in the <i>Numpad</i> input mode.
        Buttons act as a standard numeric keyboard.
        \n\nPress <i>Pencil</i> button to toggle the cell\'s note editing.\n
	</string>
    <string name="im_disable_modes_hint">
        Please remember that you don\'t have to use all input modes.
        You can disable any of them in the game settings.
        \n\nYou can also use the keyboard and trackball to control the game.
        If you want to enter notes using the keyboard, press number with alt or shift.\n
	</string>
    <string name="game">Game</string>
    <string name="show_hints">First launch hints</string>
    <string name="show_hints_summary">Show hints that guide you through application controls</string>
    <string name="show_time">Show time</string>
    <string name="show_time_summary">Show time during gameplay</string>
    <string name="screen_border_size">Screen border size</string>
    <string name="screen_border_size_summary">
        Some displays do not react to touches on screen edges.
        This could help in such cases.
	</string>
    <string name="highlight_touched_cell">Highlight cell on touch</string>
    <string name="highlight_touched_cell_summary">Highlights row and column of touched cell</string>
    <string name="highlight_completed_values">Highlight completed numbers</string>
    <string name="highlight_completed_values_summary">Highlight buttons for numbers which have been entered 9 times</string>
    <string name="theme">Theme</string>
    <string name="show_number_totals">Show Number Totals</string>
    <string name="show_number_totals_summary">Displays count of each number placed</string>
    <string name="fill_in_notes_summary">Enable "Fill in notes" menu item</string>
    <string name="highlight_similar_cells">Highlight similar cells</string>
    <string name="highlight_similar_cells_summary">Highlight cells with similar values</string>
    <string name="bidirectional_selection">Bidirectional selection</string>
    <string name="bidirectional_selection_summary">
        In single number input panel, the selection of a non editable cell automatically
        selects the corresponding button (and vice versa).
    </string>
    <string name="contributors_label">Contributors</string>
    <string name="contributors" translatable="false">
        Sergey Pimanov\n
        @TacoTheDank\n
        @steve3424\n
        Chris Lane\n
        Justin Nordin
    </string>
    <string name="screen_custom_theme">Custom theme colors</string>
    <string name="app_color_primary_title">Primary app Color</string>
    <string name="app_color_primary_summary">Status bar, buttons, tinting</string>
    <string name="app_color_accent_title">Accent Color</string>
    <string name="app_color_accent_summary">Switches and other widgets</string>
    <string name="highlight_similar_notes">Highlight similar notes</string>
    <string name="highlight_similar_notes_summary">Highlight cells with similar note values</string>
    <string name="resume">Resume</string>
    <string name="remove_notes_title">Remove notes on number entry</string>
    <string name="remove_notes_summary">Automatically remove notes from the same column, row, and box when entering a number</string>
    <string name="show_sudoku_lists_on_startup_title">Show sudoku lists on startup</string>
    <string name="show_sudoku_lists_on_startup_summary">Show the sudoku lists on startup and skip the title screen.</string>
    <string name="app_startup_category">App Startup</string>
    <string name="dark_mode_key">ui_mode</string>
    <string name="dark_mode_title">UI Mode</string>
    <string name="use_dynamic_color">Use dynamic color</string>
    <string name="use_dynamic_color_summary">Use colors from your wallpaper</string>
    <string name="pref_border_title">Cell borders</string>
    <string name="pref_border_summary">Border colors around cells and 3x3 boxes</string>
    <string name="pref_touched_title">Touched cells</string>
    <string name="pref_touched_summary">Cells in the "selection cross"</string>
    <string name="pref_selected_title">Selected cell</string>
    <string name="pref_selected_summary">The selected cell\'s focus indicator</string>
    <string name="pref_highlighted_title">Highlighted</string>
    <string name="pref_highlighted_summary">Cells identical to the selected cell</string>
    <string name="pref_error_title">Invalid values</string>
    <string name="pref_error_summary">Cells containing invalid values</string>
    <string name="pref_even_title">Even boxes</string>
    <string name="pref_even_summary">Cells in even-numbered 3x3 boxes</string>
</resources>