<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of Open Sudoku 2 - an open-source Sudoku game.
  ~ Copyright (C) 2009-2024 by original authors.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:theme="?attr/alertDialogTheme"
	android:id="@+id/scrollView"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="18dp">

		<TextView
			android:id="@+id/version_label"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/version"
			android:textSize="16sp"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="6dp"
			android:autoLink="all"
			android:gravity="fill_horizontal"
			android:text="@string/send_me_bugs"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="48dp"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="6dp"
			android:autoLink="all"
			android:gravity="center"
			android:text="@string/homepage"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="2dp"
			android:autoLink="all"
			android:gravity="center_horizontal"
			android:text="@string/current_developers_label"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginBottom="6dp"
			android:autoLink="all"
			android:gravity="center_horizontal"
			android:text="@string/current_developers"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="2dp"
			android:autoLink="all"
			android:gravity="center_horizontal"
			android:text="@string/old_developers_label"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginBottom="6dp"
			android:autoLink="all"
			android:gravity="center_horizontal"
			android:text="@string/old_developers"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="2dp"
			android:autoLink="all"
			android:gravity="center_horizontal"
			android:text="@string/contributors_label"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginBottom="6dp"
			android:autoLink="all"
			android:gravity="center_horizontal"
			android:text="@string/contributors"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="2dp"
			android:autoLink="all"
			android:gravity="center_horizontal"
			android:text="@string/localization_contributors_label"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginBottom="6dp"
			android:autoLink="all"
			android:gravity="center_horizontal"
			android:text="@string/localization_contributors"/>

	</LinearLayout>

</ScrollView>
