<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Open Sudoku 2 - an open-source Sudoku game.
  ~ Copyright (C) 2009-2023 by original authors.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:defaultValue="light"
        android:key="custom_theme_ui_mode"
        android:title="@string/dark_mode_title"
        android:dialogTitle="@string/dark_mode_title"
        android:entries="@array/custom_dark_mode_names"
        android:entryValues="@array/custom_dark_mode_codes"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:defaultValue="@color/opensudoku2_colorPrimary"
        android:key="custom_theme_colorPrimary"
        android:summary="@string/app_color_primary_summary"
        android:title="@string/app_color_primary_title"
        app:iconSpaceReserved="false" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        alphaSlider="true"
        android:defaultValue="@color/opensudoku2_colorAccent"
        android:key="custom_theme_colorAccent"
        android:summary="@string/app_color_accent_summary"
        android:title="@string/app_color_accent_title"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:title="@string/pref_border_title"
        android:summary="@string/pref_border_summary"
        app:iconSpaceReserved="false">
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorLine"
            android:key="custom_theme_colorLine"
            android:title="@string/default_colorLine"
            app:iconSpaceReserved="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorSectorLine"
            android:key="custom_theme_colorSectorLine"
            android:title="@string/default_colorSectorLine"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Editable cells"
        app:iconSpaceReserved="false">
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorText"
            android:key="custom_theme_colorText"
            android:title="@string/default_colorText"
            app:iconSpaceReserved="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorNoteText"
            android:key="custom_theme_colorNoteText"
            android:title="@string/default_colorNoteText"
            app:iconSpaceReserved="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorBackground"
            android:key="custom_theme_colorBackground"
            android:title="@string/default_colorBackground"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Given digits"
        app:iconSpaceReserved="false">
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorReadOnlyText"
            android:key="custom_theme_colorReadOnlyText"
            android:title="@string/default_colorText"
            app:iconSpaceReserved="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorReadOnlyBackground"
            android:key="custom_theme_colorReadOnlyBackground"
            android:title="@string/default_colorBackground"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_touched_title"
        android:summary="@string/pref_touched_summary"
        app:iconSpaceReserved="false">
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorTouchedText"
            android:key="custom_theme_colorTouchedText"
            android:title="@string/default_colorText"
            app:iconSpaceReserved="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorTouchedNoteText"
            android:key="custom_theme_colorTouchedNoteText"
            android:title="@string/default_colorNoteText"
            app:iconSpaceReserved="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorTouchedBackground"
            android:key="custom_theme_colorTouchedBackground"
            android:title="@string/default_colorBackground"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_selected_title"
        android:summary="@string/pref_selected_summary"
        app:iconSpaceReserved="false">
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorSelectedBackground"
            android:key="custom_theme_colorSelectedBackground"
            android:title="@string/default_colorBackground"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_highlighted_title"
        android:summary="@string/pref_highlighted_summary"
        app:iconSpaceReserved="false">
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorHighlightedText"
            android:key="custom_theme_colorHighlightedText"
            android:title="@string/default_colorText"
            app:iconSpaceReserved="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorHighlightedNoteText"
            android:key="custom_theme_colorHighlightedNoteText"
            android:title="@string/default_colorNoteText"
            app:iconSpaceReserved="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorHighlightedBackground"
            android:key="custom_theme_colorHighlightedBackground"
            android:title="@string/default_colorBackground"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_error_title"
        android:summary="@string/pref_error_summary"
        app:iconSpaceReserved="false">

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorTextError"
            android:key="custom_theme_colorTextError"
            android:title="@string/default_colorText"
            app:iconSpaceReserved="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorBackgroundError"
            android:key="custom_theme_colorBackgroundError"
            android:title="@string/default_colorBackground"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_even_title"
        android:summary="@string/pref_even_summary"
        app:iconSpaceReserved="false">
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorText"
            android:key="custom_theme_colorEvenText"
            android:title="@string/default_colorText"
            app:iconSpaceReserved="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorText"
            android:key="custom_theme_colorEvenNoteText"
            android:title="@string/default_colorNoteText"
            app:iconSpaceReserved="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/default_colorBackground"
            android:key="custom_theme_colorEvenBackground"
            android:title="@string/default_colorBackground"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
