<!--
  ~ This file is part of Open Sudoku 2 - an open-source Sudoku game.
  ~ Copyright (C) 2009-2023 by original authors.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="30dp"
	android:orientation="vertical">

	<ImageView android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		app:srcCompat="@mipmap/ic_banner"
		android:contentDescription="@string/app_name" />

	<LinearLayout android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="20dp"
		android:layout_weight="1"
		android:orientation="vertical">

		<Button android:id="@+id/resume_button"
			style="@style/Widget.Material3.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/resume" />

		<Button android:id="@+id/puzzle_lists_button"
			style="@style/Widget.Material3.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/puzzle_lists" />

		<Button android:id="@+id/settings_button"
			style="@style/Widget.Material3.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/settings" />

	</LinearLayout>

</LinearLayout>
